--- a/src/stylesheets/vortex/globals.scss
+++ b/src/stylesheets/vortex/globals.scss
@@ -57,6 +57,24 @@ body {
     }
 }
 
+::-webkit-scrollbar {
+    width: $scrollbar-width;
+    height: $scrollbar-width;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: $gray-darker;
+    border-radius: 4px;
+}
+
+::-webkit-scrollbar-corner {
+    background-color: $brand-secondary;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: darken($gray-darker, 10%);
+}
+
 ::-webkit-input-placeholder {
     color: $input-color-placeholder !important;
     font-style: italic;
